[package]
name = "infumap"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.2.1", features = ["v4"] }
totp-rs = { version = "^3.0", features = ["qr", "otpauth"] }
rocket = { version = "0.5.0-rc.2" }
lazy_static = { version = "1.4.0" }
clap = "3.0.10"
config = "0.13.1"
log = "0.4"
pretty_env_logger = "0.4.0"
dirs = "4.0"
